--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,12 +10,12 @@ services:
       - data:/data:rw
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-    devices:
-      - "/dev/dri/renderD128:/dev/dri/renderD128"
+    #devices:
+    #  - "/dev/dri/renderD128:/dev/dri/renderD128"
     environment:
-      DRINODE: /dev/dri/renderD128
+    # DRINODE: /dev/dri/renderD128
       WINEDEBUG: -all
-      TZ: "America/Toronto"
+      TZ: "Europe/Berlin"
   ai:
     image: codeproject/ai-server
     ports:
